fixed horizontal overflow issue caused by the row containing the header elements on the PlayScreen

--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -109,7 +109,7 @@ a, .btn-link {
     user-select: none; /* Standard syntax */
 }
 
-.container-md {
+.container-fluid {
     padding-left: calc(var(--bs-gutter-x) * 0.1);
     padding-right: calc(var(--bs-gutter-x) * 0.1);
     max-width: 13cm;
